<resources>
    <string name="app_name">Rasad</string>

    <string name="edt_hint_mobile_number">Mobile Number</string>
    <string name="edt_hint_username">Username</string>
    <string name="edt_hint_email">Email</string>
    <string name="edt_hint_target">Target username</string>
    <string name="edt_hint_name">Target name (optional)</string>

    <string name="btn_txt_enter">Enter</string>
    <string name="btn_txt_send">Send</string>
    <string name="btn_txt_register">Register</string>
    <string name="btn_txt_update">Update %1$s</string>
    <string name="btn_txt_track_me">Track me</string>
    <string name="btn_txt_track_other">Track other</string>
    <string name="btn_txt_stop_track">Stop track</string>
    <string name="btn_txt_positive_dialog">OK</string>
    <string name="btn_txt_negative_dialog">Cancel</string>
    <string name="btn_send_request">Request</string>
    <string name="btn_new_target">New target</string>
    <string name="btn_cancel_request_waiting">Cancel</string>
    <string name="btn_add_observer">Add</string>

    <string name="txt_login_toolbar_title">Login</string>
    <string name="txt_settings_toolbar_title">Settings</string>
    <string name="txt_force_run_toolbar_title">Theft</string>
    <string name="txt_observers_toolbar_title">Permitted observers</string>
    <string name="txt_profile_toolbar_title">Profile</string>
    <string name="txt_otp_toolbar_title">Authentication</string>
    <string name="txt_register_toolbar_title">Register</string>
    <string name="txt_track_user_bottom_sheet_new_target_msg">Type the username you want to track.</string>
    <string name="txt_track_user_bottom_sheet_saved_targets_msg">Choose one or more of the targets below or add a new target.</string>

    <string name="txt_enter_desc">* Type your mobile number to enter the app.\n  (Pattern: 09123456789)</string>
    <string name="txt_send_otp_desc">* Enter the sent OTP.</string>
    <string name="txt_register_desc">* Enter username and email.\n* Username is require and must be unique.\n* Email is optional.</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_permitted_observers">Permitted observers</string>
    <string name="txt_profile_desc">Edit profile info</string>
    <string name="txt_permitted_observers_desc">Remove permitted observers or grant new observer access</string>
    <string name="txt_theft">Theft</string>
    <string name="txt_theft_desc">Enable the app observability remotely</string>
    <string name="txt_account_title">Account</string>
    <string name="txt_no_email">No email</string>
    <string name="txt_email_title">Email</string>
    <string name="txt_username_title">Username</string>
    <string name="txt_mobile_title">Mobile</string>
    <string name="txt_edit_profile_bottom_sheet_desc">Please insert your new %1$s</string>
    <string name="txt_add_observer_bottom_sheet_desc">Please enter your target username</string>
    <string name="txt_waiting">Please wait …</string>
    <string name="txt_response_waiting">Waiting for targets responses …</string>
    <string name="txt_loading_error">Loading Error !!!</string>
    <string name="txt_no_permitted_observer">No permitted observer</string>
    <string name="txt_network_error">Network error !!!</string>
    <string name="txt_force_run_description">If you want to enable Ability to turn on the observable remotely on this phone, you can enable the force run option.\n\nWith this option, you can run the program remotely by sending an SMS containing a password from the mobile number you specified.\n\nIf you want to turn on this option...\n\n*First:  you have to enter the mobile number you want to send SMS\n*Second:  you have to enter a password (SMS must be contains this password only)</string>

    <string name="snackbar_incorrect_mobile_number">The mobile number is not correct.</string>
    <string name="snackbar_incorrect_otp">The code is not correct.</string>
    <string name="snackbar_empty_mobile_number">Please insert your mobile number.</string>
    <string name="snackbar_empty_username">Username is require.</string>
    <string name="snackbar_invalid_username">Username is not valid.</string>
    <string name="snackbar_invalid_email">Email is not valid.</string>
    <string name="snackbar_empty_field">"Please fill the %1$s"</string>
    <string name="snackbar_successfully_done">Successfully done.</string>
    <string name="snackbar_approximate_location_negative_msg">You cannot use this app without access location.</string>
    <string name="snackbar_precise_location_negative_msg">app cannot access precise location.</string>
    <string name="snackbar_background_location_negative_msg">You cannot use this app without set max level permission.</string>
    <string name="snackbar_notification_negative_msg">You cannot use this app without access post notification.</string>
    <string name="snackbar_short_click_msg">Please long click.</string>
    <string name="snackbar_empty_target">Insert Your target username</string>
    <string name="snackbar_not_selected_location_interval">Please select a sending interval</string>
    <string name="snackbar_not_selected_targets">Please select your targets</string>
    <string name="snackbar_not_found_observer">The observer was not found</string>
    <string name="snackbar_empty_observer">Please fill the username</string>
    <string name="snackbar_grant_success">You Grant permission for %1$s successfully.</string>
    <string name="snackbar_grant_failed">Failed to send permission response !!!</string>
    <string name="snackbar_deny_fail">Failed to send permission response !!!</string>

    <string name="dialog_notification_dialog_msg">You need to grant notification permission to display app operations when you closing the app.</string>
    <string name="dialog_basic_location_dialog_msg">You need to grant location permission for the app to access your current location.</string>
    <string name="dialog_background_location_dialog_msg">To continue working with the program after closing it, you must set the location access to the highest level.\n\"Allow all the time\"</string>
    <string name="dialog_remove_saved_target_msg">Are you sure to remove %1$s from the targets list.</string>
    <string name="dialog_delete_observer_permission_msg">Are you sure you want to delete this observer permission ?</string>

    <string name="tag_edit_profile_bottom_sheet">edit_profile_dialog</string>
    <string name="fab_add_member_content_description">Add member</string>
    <string name="on_off_fab_content_description">On/Off</string>

    <string name="connecting_msg">Please wait …</string>
    <string name="reconnecting_msg">Reconnecting …</string>
    <string name="disconnect_msg">App Stopped and disconnected from the server.</string>

    <string name="observable_connect_fail_msg">Failed to connect to the server !!!</string>
    <string name="observable_login_success_msg">You are visible for permissive targets.</string>
    <string name="observable_login_fail_msg">Failed to login to the server !!!</string>
    <string name="observable_logout_success_msg">You are no longer visible.</string>
    <string name="observable_logout_fail_msg">Failed to logout from the server !!!</string>
    <string name="observable_disable_setting_msg">Disable When track me on.</string>

    <string name="observer_connect_fail_msg">Failed to connect to the server !!!</string>
    <string name="observer_login_success_msg">Waiting for targets responses.</string>
    <string name="observer_login_fail_msg">Failed to login to the server !!!</string>
    <string name="observer_logout_success_msg">Tracking Stopped.</string>
    <string name="observer_logout_fail_msg">No</string>
    <string name="observer_send_request_data_fail_msg">Failed to send request !!!</string>
    <string name="cancel_observe_msg">Canceling target observation !!!</string>
    <string name="observer_disconnect_all_targets_msg">All targets are disconnected and unreachable !!!</string>
    <string name="observer_receive_data_msg">you are tracking %1$s !!!!</string>
    <string name="observer_disable_setting_msg">Disable When you are tracking.</string>

    <string name="permission_extend_notification_msg1">%1$s want to track your location when it changes.\nAre you ok ?</string>
    <string name="permission_extend_notification_msg2">%1$s want to track your location every %2$s minutes.\nAre you ok ?</string>
    <string name="permission_collapse_notification_msg">Incoming Request permission from %1$s.</string>
    <string name="location_off_msg">App is paused !!!\nTurn on location …</string>

    <string name="location">location</string>
</resources>