<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#A6ECF4"
        android:padding="80dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_profile_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="12dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/txt_profile_toolbar_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_profile_btn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_account_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_img" />

    <RelativeLayout
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mobile_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mobile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobile_txt"
            android:text="@string/txt_mobile_title"
            android:textColor="#716E6E"
            android:textSize="12sp" />

    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/sp1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mobile"
        tools:layout_editor_absoluteX="16dp" />

    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sp1"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_txt"
            android:text="@string/txt_username_title"
            android:textColor="#716E6E"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/username_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/edit" />

    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/sp2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="16dp" />

    <RelativeLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sp2"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_email"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_txt"
            android:text="@string/txt_email_title"
            android:textColor="#716E6E"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/email_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/edit" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>